# vetcoders-skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  install.sh  install.sh.sha256  install.toml  mise.toml  package-lock.json  package.json  pyproject.toml  vibecraft-framework.plugin  vibecrafted-framework.plugin
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  workflow_request.md
.github/workflows/: install-linux.yml  portable.yml  release.yml  skill-loader.yml  static.yml
agents-os/docs/: foundation.md
ai-contexters/: SKILL.md
ai-contexters/references/: commands.md
config/: README.md  mise.toml  starship.toml
config/atuin/: config.toml
config/zellij/: config.kdl
docs/: FAQ-ANSWERED.md  FAQ.md  FOUNDATION.md  FRONTIER.md  MARKETPLACE_LISTING.md  PERCEPTION.md  QUICK_START.md  SKILLS.md  SUBMISSION_FORMS.md  VIBECRAFTED.md  WHAT_IS_VIBECRAFTED.md  WORKFLOWS.md  app.js  index.html  sitemap.xml  styles.css  vibecrafted.pl.md
docs/installer/: 0_welcome_step.zsh.md  1_Explain_step.zsh.md  2_listing.zsh.md  3_examine.zsh.md  4_result.zsh.md  5_installation.zsh.md  DESIGN.md  LIVE_WIZARD.md  REFERENCE.md  SCAFFOLD.md
docs/pl/: faq.html  framework.html  index.html  quickstart.html
docs/presence/: app.js  faq.html  framework.css  framework.html  framework.js  quickstart.html  styles.css
docs/runtime/: CONTRACT.md  MANIFESTO_EN.md  MANIFESTO_PL.md  README.md
operator/: .gitignore  Cargo.toml  Makefile
operator-tui/src/: app.rs  launch.rs  lib.rs  main.rs  ui.rs
operator-tui/tests/: state_contract.rs
operator/.vibecrafted/: GUIDELINES.md  plans  reports
operator/mux-agent/: AI_README.md  CHANGELOG.md  Cargo.toml  README.md
operator/mux-agent/.github/workflows/: ci.yml  semgrep.yml
operator/mux-agent/.vibecrafted/: GUIDELINES.md
operator/mux-agent/docs/: WIZARD.md  integration.md  vc-agents-client-discovery-plan.md
operator/mux-agent/docs/dev/: guidelines.md
operator/mux-agent/src/: config.rs  lib.rs  mux_gen.rs  scan.rs  state.rs
operator/mux-agent/src/ipc/: command.rs  event.rs  handlers.rs  mod.rs  server.rs
operator/mux-agent/src/runtime/: mod.rs  server.rs  tests.rs
operator/mux-agent/src/wizard/: keys.rs  mod.rs  persist.rs  services.rs  types.rs  ui.rs
operator/mux-agent/tools/: install.sh
operator/shell-agent/: Makefile
operator/shell-agent/app/: project.yml
operator/shell-agent/app/Vibecrafted/: AppDelegate.swift
operator/shell-agent/app/Vibecrafted.xcodeproj/: project.pbxproj
operator/shell-agent/app/Vibecrafted/Bridge/: shell_agent_ffi.swift  shell_agent_ffiFFI.h  shell_agent_ffiFFI.modulemap  vibecrafted_shell_ffi.swift  vibecrafted_shell_ffiFFI.h  vibecrafted_shell_ffiFFI.modulemap
operator/shell-agent/app/Vibecrafted/Views/: CanvasViewController.swift  InspectorViewController.swift  MainSplitViewController.swift  MainWindowController.swift  SidebarViewController.swift
operator/shell-agent/ffi/: Cargo.toml  build.rs
operator/shell-agent/ffi/src/: lib.rs  shell_agent_ffi.udl
operator/shell-agent/scripts/: build-dmg.sh  build-rust-binaries.sh  build-rust.sh
operator/shell-agent/uniffi-bindgen/: Cargo.toml
operator/tray-agent/: Cargo.toml
operator/tray-agent/src/: handlers.rs  icons.rs  ipc_client.rs  lib.rs  menu.rs  state.rs  types.rs
operator/tray-agent/tests/: ipc_client.rs
operator/tui-agent/: .gitignore  Cargo.toml
operator/tui-agent/src/: app.rs  config.rs  launch.rs  lib.rs  mux.rs  ui.rs
operator/tui-agent/tests/: launch_readiness.rs  state_contract.rs
presence/: faq.html  index.html  quickstart.html  robots.txt  sitemap.xml  styles.css
runtime/helpers/: vetcoders-runtime-core.sh
scripts/: build_marketplace_bundle.py  check_shell.py  control_plane_launch.py  control_plane_state.py  install-foundations.sh  installer_brand.py  installer_gui.py  installer_tui.py  migrate_agents_workspace.sh  runtime_paths.py  setup_vibecraft.py  setup_vibecrafted.py  vc-dashboard  vetcoders_install.py  vibecraft  vibecrafted
scripts/hooks/: pre-commit  pre-push
scripts/installer/: README.md  pyproject.toml
scripts/lib/: living-tree-commit.sh
skills/: LIVING_TREE_RULE.md
skills/_template/: FLOW.md
skills/vc-agents/: SKILL.md
skills/vc-audit/: DISPATCH.md  PHASES.md  SKILL.md
skills/vc-decorate/: SKILL.md
skills/vc-delegate/: FLOW.md  SKILL.md
skills/vc-dou/: SKILL.md
skills/vc-followup/: SKILL.md
skills/vc-init/: FLOW.md  (+1 more)
src/: app.rs  launch.rs  lib.rs  mux.rs  ui.rs
tests/: conftest.py  race_protection_test.sh  state_contract.rs
tools/: README.md
vetcoders-agents/: SKILL.md
vetcoders-delegate/: SKILL.md
vetcoders-followup/: SKILL.md
vetcoders-hydrate/: SKILL.md
vetcoders-init/: SKILL.md
vetcoders-marbles/: SKILL.md
vetcoders-ownership/: README.md  SKILL.md
vetcoders-partner/: README.md  SKILL.md
vetcoders-prune/: SKILL.md
vetcoders-prview/: SKILL.md
vetcoders-research/: SKILL.md
vetcoders-screenscribe/: README.md  SKILL.md
vetcoders-ship/: SKILL.md
vetcoders-spawn/: SKILL.md
vetcoders-workflow/: SKILL.md
vibecrafted-core/: README.md  pyproject.toml
vibecrafted-mcp/: pyproject.toml
workflows/: MARBLES.md
(+182 files in other folders)
