[package]
name = "tray-agent"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
muda = "0.17"
mux-agent = { package = "rust-mux", path = "../mux-agent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.34"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tray-icon = "0.21"

[dev-dependencies]
tempfile = "3"
