[package]
name = "vibecrafted-operator"
version = "0.1.1"
edition.workspace = true
license = "MIT"
authors.workspace = true
description = "Rust operator console for Vibecrafted"
readme = "README.md"
homepage = "https://vibecrafted.io"
repository = "https://github.com/VetCoders/vc-operator"
documentation = "https://docs.rs/vibecrafted-operator"

[dependencies]
rust-mux = { path = "../mux-agent", package = "rust-mux" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync"] }
anyhow = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29"
notify = "6"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
