[package]
name = "shell-agent-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "shell_agent_ffi"

[dependencies]
uniffi = { version = "0.30", features = ["tokio"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
mux-agent = { package = "rust-mux", path = "../../mux-agent" }
tui-agent = { package = "vibecrafted-operator", path = "../../tui-agent" }
tray-agent = { path = "../../tray-agent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }